# clihatch

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/: error.rs  github.rs  lib.rs  main.rs  output.rs  process.rs  scaffold.rs  schema.rs  secrets.rs
templates/: Cargo.toml.tmpl  Makefile.tmpl  README.md.tmpl  pyproject.toml.tmpl
templates/.github/workflows/: release.yml.tmpl
templates/src/: error.rs.tmpl  lib.rs.tmpl  main.rs.tmpl  schema.rs.tmpl
templates/tests/: cli.rs.tmpl  conformance.rs.tmpl
tests/: compiles.rs  conformance.rs  scaffold.rs
